--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Bio</title>
+    <title>Hi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* General Layout */
@@ -118,8 +118,8 @@
 <!-- Biography Section -->
 <div class="bio-text">
     <h3>Interactive Developer Santiago</h3>
-    <p>I am an interactive developer working on computer vision projects, with certifications in C++, Swift, and Objective-C.</p>
-    <p>Contact me for projects at <a href="mailto:sakayama234234@icloud.com">sakayama234234@icloud.com</a></p>
+    <p>I am an interactive developer working on computer vision projects, with certifications in Python, C++, Swift, and Objective-C.</p>
+    <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
 </div>
 
 <!-- Profile Image -->
