--- a/index.html
+++ b/index.html
@@ -117,13 +117,14 @@
 
 <!-- Biography Section -->
 <div class="bio-text">
-    <h3>Interactive Developer Santiago</h3>
-    <p>I am an interactive developer working on computer vision projects, with certifications in Python, C++, Swift, and Objective-C.</p>
+    <h3>Interactive Developer from SCL</h3>
+     <p>I Work in Computer Vision and Text applications </p>
+     <p> Certified in Python, C++, Swift, and Objective-C.</p>
     <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
 </div>
 
 <!-- Profile Image -->
-<img class="bio-image" src="00000000000000.PNG" alt="Profile Image">
+<img class="img-fluid" src="00000000000000.PNG" alt="Computer Vision Project">
 
 <script>
 function changeColorMode(mode) {
