--- a/index.html
+++ b/index.html
@@ -167,11 +167,15 @@
 <!-- Bio Section -->
 <div class="bio-text">
     <h3>Interactive Developer Santiago</h3>
-    <p>I work on advanced UI design projects, specializing in React, JavaScript, and UI/UX.</p>
+    <img class="img-fluid" src="00000000000000.PNG" alt="Reading with Tesseract OCR">
+
+    <p>I am an interactive developer working on computer vision  and text based projects, </p>
+     <p>   with certifications in C++, Swift, and Objective-C.</p>
+    <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama66634@icloud.com</a></p>
 </div>
 
-<!-- Project Image -->
-<img class="project-image" src="project-image.png" alt="Project Image">
+
+
 
 <script>
 const themes = ["theme-unicorn", "theme-hello-kitty", "theme-fruits", "theme-matrix", "theme-solarized", "theme-minimal", "theme-grayscale", "theme-green-orange"];
