--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Portfolio</title>
+    <title>Hi!</title>
     <style>
         body {
             margin: 0;
@@ -46,11 +46,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Who??</h1>
-        <img src="project-image.jpg" alt="CV with Tesseract OCR">
+        <h1>Who Am I?</h1>
+        <img src="project-image.jpg" alt="Project Image">
         <p>I am an interactive developer working on computer vision and text-based projects,</p>
         <p>with certifications in Python, C++, Swift, and Objective-C.</p>
-        <p>Contact me for media arts projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
+        <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama666@icloud.com</a></p>
     </div>
     
     <div class="toggles">
