--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <body>
     <div class="container">
         <h1>Interactive Developer from SCL</h1>
-        <img src="00000000000000.PNG" alt="Project Image">
-        <p>Formed as a Visual Artist and Engineer , I'm working on computer vision and text-based projects.</p>
+        <img src="00000000000000.PNG" alt="Text Based CV Project">
+        <p>Formed as a Visual Artist and Engineer , working on Computer Vision projects.</p>
         <p>Certified in Python, C++, Swift, and Objective-C languages.</p>
         <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama666icloud.com</a></p>
     </div>
