--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Interactive Developer from SCL</h1>
+        <h3>Media Artist from SCL</h3>
         <img src="00000000000000.PNG" alt="Text Based CV Project">
-        <p>Formed as a Visual Artist and Engineer , working on Computer Vision projects.</p>
-        <p>Certified in Python, C++, Swift, and Objective-C languages.</p>
+        <p>Currently working on Computer Vision and text-based projects.</p>
         <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com">sakayama666icloud.com</a></p>
     </div>
     
